Fixes on toast not coming up on mobile and sticky header

--- a/public/assets/scss/theme/_responsive.scss
+++ b/public/assets/scss/theme/_responsive.scss
@@ -4059,10 +4059,10 @@
 }
 
 @media (max-width: 480px) {
-  .Toastify__toast-container{
-    width: 90vw;
-    margin: 0 auto;
-  }
+  // .Toastify__toast-container{
+  //   width: 90vw;
+  //   margin: 0 auto;
+  // }
   .quick-view-modal{
     .product-buttons{
       .btn{
